@@ -208,7 +208,7 @@ int Actor::ready_ammo
 	Weapon_info *winf = Actor::get_weapon(points);
 	int ammo;
 	if (!winf || (ammo = winf->get_ammo_consumed()) == 0)
-		return 0;		// No weapon, or ammo not needed.
+		return 1;		// No weapon, or ammo not needed.
 					// See if already have ammo.
 	Game_object *aobj = get_readied(Actor::ammo);
 	if (aobj && In_ammo_family(aobj->get_shapenum(), ammo))
